# poke_comp

./: .gitignore  AGENTS.md  CLAUDE.md  LEGAL_AND_DEV_GUIDELINES.md  LICENSE  README.md  champions-prd.md  decisions.md  ingest-manifest.yaml  package.json  plan.md  rag-architecture.md  seed_user.py  todo.md  vercel.json
api/: .env.example  champions_validation_report.json  index.py  movepool_gaps_report.json  pikalytics_translations.json  pyproject.toml  requirements.txt
api/app/: ai_quota.py  auth.py  config.py  database.py  main.py  prompt_guard.py  validators.py
api/app/models/: abilities.py  cheatsheet.py  draft.py  ingest.py  items.py  matchup.py  meta.py  moves.py  pokemon.py  profile.py  team.py  usage.py  user_pokemon.py
api/app/routers/: abilities.py  admin.py  admin_cron.py  admin_review.py  ai_usage.py  calc.py  cheatsheet.py  draft.py  items.py  matchups.py  meta.py  moves.py  pokemon.py  profile.py  public.py  (+4 more)
api/scripts/: benchmark_rag.py  build_pikalytics_translations.py  import_pokeapi.py  refresh_meta.py  scan_movepool_gaps.py  scrape_meta.py  seed_auth_user.py  seed_champions.py  seed_meta.py  seed_roster_from_notion.py  seed_usage.py  smoke_test.py  test_cache_utils.py  test_damage_calc.py  validate_champions_sources.py  validate_data.py  verify_draft_prompt.py
api/tests/: test_admin.py  test_admin_cron.py  test_ai_quota.py  test_alerting.py  test_cache_utils.py  test_classifier.py  test_damage_calc.py  test_meta_trends.py  test_rag.py  test_review_logic.py  test_strategy_suggestions.py  test_ux_audit_contracts.py  test_validate_data.py
(+246 files in other folders)
