[project]
name = "poke-comp-api"
version = "0.1.0"
description = "Pokemon Champions Companion API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "supabase>=2.13.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "anthropic>=0.52.0",
    "beautifulsoup4>=4.12.0",
    "PyJWT>=2.8.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pyright>=1.1.390",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"scripts/seed_champions.py" = ["E501"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.10",
]
